# ghost-cursor-rs

./: Cargo.toml  README.md
fixtures/ts-parity/: README.md  box_target_default_spread.json  index.json  point_long_spread0.json  point_short_spread0.json  point_spread_random.json  point_timestamp_spread0.json
scripts/ts-parity/: compare-fixtures.js  generate-fixtures.js
src/: bezier.rs  cursor.rs  lib.rs  math.rs  path.rs  types.rs
tests/: playwright_integration.rs  ts_parity_fixtures.rs
